# Voice-Finance

./: .env.example  .gitignore  FINAL_SUMMARY.txt  README.md  SETUP_GUIDE.sh  pyproject.toml  requirements.txt  solution.py
config/: logging_config.py  settings.py
docker/: Dockerfile.streamlit  docker-compose.yml
src/: main.py
src/agents/: keyword_agent.py  speech_agent.py  synthesis_agent.py
src/agents/analysis_agents/: news_analysis.py  price_analysis.py
src/agents/data_agents/: news_api.py  price_api.py
src/agents/retriever_agents/: news_retriever.py  price_retriever.py
src/core/: llm_config.py  models.py  vector_stores.py
src/microservices/: api.py  main.py  request_model.py
src/orchestration/: routing.py  states.py  workflow.py
src/services/: api_wrappers.py  speech_service.py
src/ui/: app.py
