[project]
name = "financial-analysis-system"
version = "0.1.0"
description = "AI-powered financial market analysis system"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-huggingface>=0.0.5",
    "langchain-chroma>=0.0.5",
    "langgraph>=0.0.10",
    "langchain-groq>=0.0.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "streamlit",
    "fastapi",
    "uvicorn",
    "python-json-logger",
    "torch>=2.1.0",
    "sentence-transformers>=2.2.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/financial-analysis-system"

[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.0.28"
]

[project.scripts]
financial-analysis = "src.main:main"
